--- a/test_from_bilili/style.css
+++ b/test_from_bilili/style.css
@@ -13,3 +13,39 @@ body{
     align-items: center;
     justify-content: center;
 }
+
+.login-form{
+    width: 470px;
+    background: #202020;
+    padding: 30px 60px;
+}
+
+.logo{
+    height: 50px;
+    text-align: center;
+}
+
+.logo img{
+    height: 50px;
+}
+
+.social-media{
+    display: flex;
+    height: 30px 0;
+}
+
+.social-media button{
+    height: 50px;
+    width: 100px;
+    margin-right: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    border: none;
+    transition: .3s linear;
+}
+
+.social-media button:last-child{
+    margin: 0;
+}
